--- a/client/src/partials/view/trip.html
+++ b/client/src/partials/view/trip.html
@@ -1,3 +1,9 @@
 <div class="row">
-    <h1>{{trip.name}}</h1>
+    <h1><span style="text-transform: capitalize">Trip:</span> {{trip.name}}</h1>
+    <i class="mdi-action-today icon-barmaterial-pink">&nbsp; {{trip.date.toPrettyString()}}</i>
+   
+</div>
+
+<div class="row">
+     <h3>Days</h3>
 </div>
