--- a/server/client/partials/create/trip.html
+++ b/server/client/partials/create/trip.html
@@ -50,7 +50,7 @@
                         <div class="form-group">
                             <label for="fuelC">Average fuel consumption</label>
                             <div  class="col-sm-10">
-                                <input required="required" type="text" class="form-control" id="fuelC" data-ng-model="trip.consumption" placeholder="Fuel consumption">
+                                <input required="required" type="number" class="form-control" id="fuelC" data-ng-model="trip.consumption" placeholder="Fuel consumption">
                             </div>
                         </div>
                         <div class="form-group">
