--- a/server/client/js/trip/partial/tripForm.html
+++ b/server/client/js/trip/partial/tripForm.html
@@ -1,7 +1,7 @@
 <div class="row slideInLeft animated">
     <h2>Create a new trip</h2>
     <div class="row">    
-        <div class="col-lg-6" >
+        <div class="col-xs-6" >
             <h3>Name: </h3>
             <input required="required" class="form-control" type="text" data-ng-model="trip.name" placeholder="Enter trip name">
             <h4>Date: </h4>
@@ -16,7 +16,7 @@
 
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-xs-6">
             <h4>Distance units</h4>
             <div class="radio radio-primary">
                 <label>
@@ -39,10 +39,10 @@
     </div>
     <h3>Car information</h3>
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-xs-8">
             <h4></h4>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-xs-9">
                     <form class="form-horizontal" novalidate role="form">
 
 
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-xs-3">
 
         </div>
     </div>
