--- a/server/client/js/auth/partial/login.html
+++ b/server/client/js/auth/partial/login.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12" >
         <h1>Please login</h1>
         You need to login to continue. Please login using Facebook or Google.
-        <button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button>
-        <button type="button" id="facebook_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button>
+        <div><button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button>
+        <button type="button" id="facebook_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button></div>
     </div>
 </div>
