specified date format

--- a/server/client/js/trip/partial/tripForm.html
+++ b/server/client/js/trip/partial/tripForm.html
@@ -7,7 +7,7 @@
             <h4>Date: </h4>
 
             <p class="input-group">
-                <input type="text" class="form-control" datepicker-popup="" placeholder="Trip start date" data-ng-model="trip.date" is-open="openedDatePicker" data-ng-required="true" close-text="Close" />
+                <input type="text" class="form-control"  datepicker-popup="dd-MMMM-yyyy" placeholder="Trip start date" data-ng-model="trip.date" is-open="openedDatePicker" data-ng-required="true" close-text="Close" />
                 <span class="input-group-btn">
                     <button type="button" class="btn btn-default" data-ng-click="openDatePicker($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
