--- a/server/client/js/home/partial/home.html
+++ b/server/client/js/home/partial/home.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <h1>TripPlanner</h1>
     <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn btn-lg btn-success" href="#/trip/new">Start new trip</a></p>
+    <p><a class="btn btn-lg btn-success" ui-sref="trip.new({id : 'new'})" >Start new trip</a></p>
 </div>
 
 <div class="row marketing">
