--- a/server/client/js/trip/partial/tripForm.html
+++ b/server/client/js/trip/partial/tripForm.html
@@ -1,5 +1,7 @@
-<div class="row slideInLeft animated">
-    <h2>Create a new trip</h2>
+<div class="row">
+    <h2> <span data-ng-if="trip.id == -1">Create new </span>
+        <span data-ng-if="trip.id != -1">Edit</span> trip
+    </h2>
     <div class="row">    
         <div class="col-xs-6" >
             <h3>Name: </h3>
@@ -85,6 +87,8 @@
         </div>
     </div>
     <div class="row">
-        <button class="btn btn-primary pull-right" data-ng-click="createTrip()" data-ng-disabled="!tripIsValid()" >Create</button>
+        <button data-ng-if="trip.id == -1" class="btn btn-primary pull-right" data-ng-click="createTrip()" data-ng-disabled="!tripIsValid()" >Create</button>
+        <button data-ng-if="trip.id != -1" class="btn btn-primary pull-right" data-ng-click="updateTrip()" data-ng-disabled="!tripIsValid()" >Save</button>
+        <button data-ng-if="trip.id != -1" class="btn btn-warning pull-right" data-ng-click="cancelEdit()" >Cancel</button>
     </div>
 </div>
