--- a/server/client/js/trip/partial/trip.html
+++ b/server/client/js/trip/partial/trip.html
@@ -1,39 +1,20 @@
 <!--trip core data -->
 <div ui-view=""></div>
 
-<!--
-<div class="row">
-    <h3>Days</h3>
+
+<div class="row" data-ng-if="trip">
+    <h3>Days ({{::trip.days.length}})</h3>
     <div class="list-group">
-        <div class="list-group-item">
-            <div class="row-picture">
-                <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
+        <div data-ng-repeat="day in trip.days"><div class="list-group-item">
+                <div class="row-picture">
+                    <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
+                </div>
+                <div class="row-content">
+                    <h4 class="list-group-item-heading" data-ng-bind="::day.name"></h4>
+                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus</p>
+                </div>
             </div>
-            <div class="row-content">
-                <h4 class="list-group-item-heading">Tile with avatar</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus</p>
-            </div>
+            <div class="list-group-separator"></div>
         </div>
-        <div class="list-group-separator"></div>
-        <div class="list-group-item">
-            <div class="row-picture">
-                <img class="circle" src="http://lorempixel.com/56/56/people/6" alt="icon">
-            </div>
-            <div class="row-content">
-                <h4 class="list-group-item-heading">Tile with another avatar</h4>
-                <p class="list-group-item-text">Maecenas sed diam eget risus varius blandit.</p>
-            </div>
-        </div>
-        <div class="list-group-separator"></div>
-        <div class="list-group-item">
-            <div class="row-action-primary checkbox">
-                <label><input type="checkbox"></label>
-            </div>
-            <div class="row-content">
-                <h4 class="list-group-item-heading">Tile with a checkbox in it</h4>
-                <p class="list-group-item-text">Donec id elit non mi risus varius blandit.</p>
-            </div>
-        </div>
-        <div class="list-group-separator"></div>
     </div>
-</div>-->
+</div>
