--- a/server/client/js/trip/partial/tripInfo.html
+++ b/server/client/js/trip/partial/tripInfo.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-9" >
-        <h1><span style="text-transform: capitalize">Trip:</span> {{trip.name}}</h1>
+        <h1 style="font-variant: small-caps"><span>Trip:</span> {{trip.name}}</h1>
     </div>
     <div class="col-xs-3" data-ng-show="trip">
         <tp-profile label="'Owner'" user-id="trip.owner"></tp-profile>
