handled tripday conversion from server

--- a/server/client/js/trip/partial/trip.html
+++ b/server/client/js/trip/partial/trip.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="row-content">
                     <h4 class="list-group-item-heading" data-ng-bind="::day.name"></h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus</p>
+                    <p class="list-group-item-text" data-ng-bind="::day.localDate.toPrettyString()"></p>
                 </div>
             </div>
             <div class="list-group-separator"></div>
