--- a/server/client/js/trip/partial/trip.html
+++ b/server/client/js/trip/partial/trip.html
@@ -5,13 +5,21 @@
 <div class="row" data-ng-if="trip">
     <h3>Days ({{::trip.days.length}})</h3>
     <div class="list-group">
-        <div data-ng-repeat="day in trip.days"><div class="list-group-item">
+        <div class="day" data-ng-repeat="day in trip.days track by day.id" data-ng-mouseenter="buttons[$index] = true" 
+             data-ng-click="openDay($index)" data-ng-mouseleave="buttons[$index] = false" title="Click to open">
+            <div class="list-group-item col-xs-6">
                 <div class="row-picture">
                     <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
                 </div>
                 <div class="row-content">
                     <h4 class="list-group-item-heading" data-ng-bind="::day.name"></h4>
                     <p class="list-group-item-text" data-ng-bind="::day.localDate.toPrettyString()"></p>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div data-ng-if="hasPermission && buttons[$index]" >
+                    <a ui-sref="day.edit()" data-ng-click="editDay($index)" class="btn btn-flat btn-info"><i class="mdi-content-create"></i>&nbsp;Edit</a>
+                    <button data-ng-click="deleteDay($index)" class="btn btn-flat btn-danger"><i class="mdi-content-clear"></i>&nbsp;Delete</button>
                 </div>
             </div>
             <div class="list-group-separator"></div>
