--- a/server/client/js/trip/partial/tripInfo.html
+++ b/server/client/js/trip/partial/tripInfo.html
@@ -14,9 +14,9 @@
     
     <div class="col-xs-4" >
 
-        <i class="mdi-action-today icon-barmaterial-pink">&nbsp; {{trip.localDate}}</i>
+        <i class="mdi-action-today icon-barmaterial-pink">&nbsp;&nbsp;{{tripDate}}</i>
     </div>
     <div class="col-xs-4" >
-        <h5><b>Car consumption:</b> <span data-ng-bind="trip.consumption"></span>&nbsp;<span data-ng-bind="trip.getPrettyConsumptionUnits()"></span>&nbsp;({{::trip.fuelType}})</h5>
+        <i class="mdi-action-invert-colors icon-barmaterial-pink">&nbsp;&nbsp;Car consumption: {{::trip.consumption}}&nbsp;{{::trip.getPrettyConsumptionUnits()}}&nbsp;({{::trip.fuelType}})</i>
     </div>
 </div>
