--- a/server/client/js/trip/partial/tripInfo.html
+++ b/server/client/js/trip/partial/tripInfo.html
@@ -14,7 +14,7 @@
     
     <div class="col-xs-4" >
 
-        <i class="mdi-action-today icon-barmaterial-pink">&nbsp;&nbsp;{{tripDate}}</i>
+        <i class="mdi-action-today icon-barmaterial-pink">&nbsp;&nbsp;{{trip.getDuration()}}</i>
     </div>
     <div class="col-xs-4" >
         <i class="mdi-action-invert-colors icon-barmaterial-pink">&nbsp;&nbsp;Car consumption: {{::trip.consumption}}&nbsp;{{::trip.getPrettyConsumptionUnits()}}&nbsp;({{::trip.fuelType}})</i>
