--- a/server/client/css/custom.css
+++ b/server/client/css/custom.css
@@ -168,3 +168,17 @@ body {
 #loginDropdown a, loginMenu a {
     cursor: pointer !important;
 }
+
+.btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
+    background-image: none !important;
+}
+.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
+    color: #333 !important;
+    background-color: #ebebeb !important;
+    border-color: #adadad !important;
+}
+.btn:active, .btn.active {
+    outline: 0 !important;
+    background-image: none !important;
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125) !important;
+}
