focusing textAngular on render

--- a/server/client/js/ext_note/partial/note.html
+++ b/server/client/js/ext_note/partial/note.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12" >
         <h1>Create note for "{{::dayName}}"&nbsp;<small>{{::localDate}}</small></h1>
-        <text-angular data-ng-model="note.data"></text-angular>
+        <text-angular name="note" data-ng-model="note.data"></text-angular>
     </div>
 </div>
 <div class="row">
