generic way to display day extensions

--- a/server/client/js/trip/partial/trip.html
+++ b/server/client/js/trip/partial/trip.html
@@ -1,31 +1,43 @@
 <!--trip core data -->
 <div ui-view=""></div>
 
+<div data-ng-if="trip.id != - 1">
+    <div class="row" >
+        <h3>Days ({{trip.days.length}}) 
+            <a data-ng-if="editPermission" ui-sref="day.new({ tripId: trip.id})"  ui-sref-opts="{reload: true}" class="btn btn-flat btn-info"><i class="mdi-content-add"></i>&nbsp;Add</a>
+        </h3>
+    </div>
 
-<div class="row" data-ng-if="trip.id != -1">
-    <h3>Days ({{trip.days.length}}) 
-        <a data-ng-if="editPermission" ui-sref="day.new({ tripId: trip.id})"  ui-sref-opts="{reload: true}" class="btn btn-flat btn-info"><i class="mdi-content-add"></i>&nbsp;Add</a>
-    </h3>
-    <div class="list-group">
-        <div class="day" data-ng-repeat="day in trip.days track by day.id" data-ng-mouseenter="buttons[$index] = true" 
-             data-ng-click="openDay($index)" data-ng-mouseleave="buttons[$index] = false">
-            <div class="list-group-item col-xs-6">
-                <div class="row-action-primary">
-                    <i class="mdi-file-folder"></i>
-                </div>
-                <div class="row-content">
-                    <h4 class="list-group-item-heading" data-ng-bind="::day.name"></h4>
-                    <p class="list-group-item-text" data-ng-bind="::day.localDate.toPrettyString()"></p>
+    <div data-ng-repeat="day in trip.days track by day.id">
+        <div class="row"  >
+            <div class="list-group" >
+                <div class="day" data-ng-mouseenter="buttons[$index] = true" 
+                     data-ng-click="openDay($index)" data-ng-mouseleave="buttons[$index] = false">
+                    <div class="list-group-item col-xs-6">
+                        <div class="row-action-primary">
+                            <i class="mdi-file-folder"></i>
+                        </div>
+                        <div class="row-content">
+                            <h4 class="list-group-item-heading" data-ng-bind="::day.name"></h4>
+                            <p class="list-group-item-text" data-ng-bind="::day.localDate.toPrettyString()"></p>
+                        </div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div data-ng-if="editPermission && buttons[$index]" >
+                            <a ui-sref="day.edit({id : day.id, noCache: true, tripId : trip.id})" class="btn btn-flat btn-info"><i class="mdi-content-create"></i>&nbsp;Edit</a>
+                            <button data-ng-click="deleteDay($index)" class="btn btn-flat btn-danger"><i class="mdi-content-clear"></i>&nbsp;Delete</button>
+                            <tp-add-extension day="day"></tp-add-extension>
+                        </div>
+                    </div>
+                    <div class="list-group-separator"></div>
                 </div>
             </div>
-            <div class="col-xs-6">
-                <div data-ng-if="editPermission && buttons[$index]" >
-                    <a ui-sref="day.edit({id : day.id, noCache: true, tripId : trip.id})" class="btn btn-flat btn-info"><i class="mdi-content-create"></i>&nbsp;Edit</a>
-                    <button data-ng-click="deleteDay($index)" class="btn btn-flat btn-danger"><i class="mdi-content-clear"></i>&nbsp;Delete</button>
-                    <tp-add-extension day="day"></tp-add-extension>
-                </div>
+        </div>
+        <div class="row">
+            <div data-ng-repeat="ext in day.data" class="col-xs-12 col-md-6 col-lg-6 extBox" >
+                <tp-day-extension name="{{ext.name}}" extId="{{ext.id}}"></tp-day-extension>
             </div>
-            <div class="list-group-separator"></div>
         </div>
     </div>
+
 </div>
