--- a/server/client/css/custom.css
+++ b/server/client/css/custom.css
@@ -182,3 +182,8 @@ body {
     background-image: none !important;
     box-shadow: inset 0 3px 5px rgba(0,0,0,.125) !important;
 }
+.extBox{
+    border: #ddd 1px solid;
+    background: #eee;
+    box-shadow: 2px 2px 2px #ccc;
+}
