--- a/server/client/js/ext_note/partial/note.html
+++ b/server/client/js/ext_note/partial/note.html
@@ -7,7 +7,8 @@
 <div class="row">
     <div class="col-xs-8" ></div>
     <div class="col-xs-4" >
-        <button type="button" class="btn btn-primary pull-right" data-ng-disabled="!note.isValid()" data-ng-click="create()">Create</button>
+        <button type="button" data-ng-if="isEdit == false" class="btn btn-primary pull-right" data-ng-disabled="!note.isValid()" data-ng-click="create()">Create</button>
+        <button type="button" data-ng-if="isEdit == true" class="btn btn-primary pull-right" data-ng-disabled="!note.isValid()" data-ng-click="update()">Save</button>
         <button type="button" class="btn btn-warning pull-right" data-ng-click="cancel()">Cancel</button>
     </div>
 </div>
