--- a/server/client/js/trip/partial/tripInfo.html
+++ b/server/client/js/trip/partial/tripInfo.html
@@ -14,9 +14,9 @@
     
     <div class="col-xs-4" >
 
-        <i class="mdi-action-today icon-barmaterial-pink">&nbsp;&nbsp;{{trip.getDuration()}}</i>
+        <span><i class="mdi-action-today icon-barmaterial-pink">&nbsp;</i>{{trip.getDuration()}}</span>
     </div>
     <div class="col-xs-4" >
-        <i class="mdi-action-invert-colors icon-barmaterial-pink">&nbsp;&nbsp;Car consumption: {{::trip.consumption}}&nbsp;{{::trip.getPrettyConsumptionUnits()}}&nbsp;({{::trip.fuelType}})</i>
+        <span><i class="mdi-action-invert-colors icon-barmaterial-pink">&nbsp;</i>Car consumption: {{::trip.consumption}}&nbsp;{{::trip.getPrettyConsumptionUnits()}}&nbsp;({{::trip.fuelType}})</span>
     </div>
 </div>
