--- a/server/client/js/ext_route/partial/route.html
+++ b/server/client/js/ext_route/partial/route.html
@@ -1,20 +1,43 @@
 <div class="row">
     <h1>Create route for "{{::dayName}}"&nbsp;<small>{{::localDate}}</small></h1>
     <div class="col-xs-12" >
-        <h4>Name: </h4>
+        <h4>Name</h4>
         <input required="required" class="form-control" type="text" data-ng-model="route.data.name" placeholder="Enter route name">
     </div>
 </div>
 <div class="row">
 
     <div class="col-xs-7" >
-        <h4>From: </h4>
+        <h4>From</h4>
         <input id="from-input" required="required" class="form-control" type="text" placeholder="Enter address">
 
-        <h4>Waypoints: </h4>
-        <input required="required" class="form-control" type="text" data-ng-model="route.data.name" placeholder="Enter address">
+        <h4>Waypoints</h4>
+        <table class="table table-condensed table-hover table-waypoint">
+            <tbody>
+                <tr data-ng-repeat="waypoint in route.data.waypoints track by waypoint.id">
+                    <td style="padding: 0">{{waypoint.label}}</td> 
+                    <td title="Remove waypoint">
+                        <button data-ng-click="removeWaypoint(waypoint.id)" class="btn btn-flat btn-danger btn-mini">
+                            <i class="mdi-content-clear"></i>
+                        </button>
+                    </td> 
+                    <td title="Move up">
+                        <button data-ng-click="moveWaypoint(waypoint.id, -1)" class="btn btn-flat btn-default btn-mini">
+                            <i class="mdi-hardware-keyboard-arrow-up"></i>
+                        </button>
+                    </td> 
+                    <td title="Move down">
+                        <button data-ng-click="moveWaypoint(waypoint.id, 1)" class="btn btn-flat btn-default btn-mini">
+                            <i class="mdi-hardware-keyboard-arrow-down"></i>
+                        </button>
+                    </td> 
+                </tr>
+            </tbody>
+        </table>
 
-        <h4>To: </h4>
+        <input required="required" id="waypoint-input" class="form-control" type="text" placeholder="Enter address">
+
+        <h4>To</h4>
         <input id="to-input" required="required" class="form-control" type="text" placeholder="Enter address">
     </div>
     <div class="col-xs-5">
@@ -34,13 +57,19 @@
 
     </div>
 </div>
-
+<div class="row">
+    <div class="col-xs-8" ></div>
+    <div class="col-xs-4" >
+        <button type="button" data-ng-if="isEdit == false" class="btn btn-primary pull-right" data-ng-disabled="!route.isValid()" data-ng-click="find()">Find route</button>
+        <button type="button" class="btn btn-warning pull-right" data-ng-click="cancel()">Cancel</button>
+    </div>
+</div>
 
 <div class="row" data-ng-if="foundRoutes">
     <h2>Select route</h2>
 
     <div class="col-lg-12" >
-        <h4>Found routes {{directions.length}}</h4>
+        <h4>Found routes: {{directions.length}}</h4>
         <table class="table">
             <thead>
                 <tr>
@@ -58,7 +87,7 @@
                     <td>{{route.legs[0].distance.text}}</td>
                     <td>{{route.legs[0].duration.text}}</td>
                     <td>
-                        <button type="button" class="btn btn-default {{selectedDirection == $index && 'active'}} {{selectedDirection == $index && 'btn-success'}}" data-ng-click="selectDirection($index)">
+                        <button type="button" class="btn btn-primary {{selectedDirection == $index && 'active'}} {{selectedDirection == $index && 'btn-success'}}" data-ng-click="selectDirection($index)">
                             <span data-ng-if="selectedDirection == $index">
                                 Selected
                             </span>
@@ -88,18 +117,11 @@
     </div>
 </div>
 
-
-
-
-
-
-
-
 <div class="row">
     <div class="col-xs-8" ></div>
     <div class="col-xs-4" >
-        <button type="button" data-ng-if="isEdit == false" class="btn btn-primary pull-right" data-ng-disabled="!routeIsValid()" data-ng-click="create()">Create</button>
-        <button type="button" data-ng-if="isEdit == true" class="btn btn-primary pull-right" data-ng-disabled="!routeIsValid()" data-ng-click="update()">Save</button>
+        <button type="button" data-ng-if="isEdit == false" class="btn btn-primary pull-right" data-ng-disabled="selectedDirection > -1" data-ng-click="create()">Create</button>
+        <button type="button" data-ng-if="isEdit == true" class="btn btn-primary pull-right" data-ng-disabled="!route.isValid()" data-ng-click="update()">Save</button>
         <button type="button" class="btn btn-warning pull-right" data-ng-click="cancel()">Cancel</button>
     </div>
 </div>
