--- a/client/js/trip/partial/trip.html
+++ b/client/js/trip/partial/trip.html
@@ -1,7 +1,7 @@
 <!--trip core data -->
 <div ui-view=""></div>
 
-<div data-ng-if="trip.id != - 1">
+<div data-ng-if="trip.id != -1">
     <div class="row" >
         <h3>Days ({{trip.days.length}}) 
             <a data-ng-if="editPermission" ui-sref="day.new({ tripId: trip.id})"  ui-sref-opts="{reload: true}" class="btn btn-flat btn-info"><i class="mdi-content-add"></i>&nbsp;Add</a>
@@ -33,9 +33,13 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div data-ng-repeat="ext in day.data" class="col-xs-12 col-md-6 col-lg-6 extBox" >
-                <tp-day-extension name="{{ext.name}}" extId="{{ext.id}}" editPermissions="{{editPermission}}"></tp-day-extension>
+
+        <div data-ng-repeat="ext in day.data" class="extBox" >
+            <div class="row">
+                <div class="col-xs-1 col-md-2 col-lg-2 extBox"></div>
+                <div class="col-xs-11 col-md-10 col-lg-10 extBox">
+                    <tp-day-extension name="{{ext.name}}" extId="{{ext.id}}" editPermissions="{{editPermission}}"></tp-day-extension>
+                </div>
             </div>
         </div>
     </div>
