--- a/client/js/trip/partial/trip.html
+++ b/client/js/trip/partial/trip.html
@@ -36,8 +36,8 @@
 
         <div data-ng-repeat="ext in day.data" class="extBox" >
             <div class="row">
-                <div class="col-xs-1 col-md-2 col-lg-2 extBox"></div>
-                <div class="col-xs-11 col-md-10 col-lg-10 extBox">
+                <div class="col-xs-1 col-md-2 col-lg-2"></div>
+                <div class="col-xs-11 col-md-10 col-lg-10">
                     <tp-day-extension name="{{ext.name}}" extId="{{ext.id}}" editPermissions="{{editPermission}}"></tp-day-extension>
                 </div>
             </div>
