--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -187,7 +187,7 @@ body {
     background: #eee;
     box-shadow: 2px 2px 2px #ccc;
     min-height: 150px;
-    position: relative;
+    /*position: relative;*/
 }
 [class^=mdi-],[class*=mdi-] {
     font: normal normal normal 14px/1 'Material-Design-Icons' !important;
@@ -212,13 +212,13 @@ body {
     padding:80px 0 60px;
 }
 
-.footerExt{
+/*.footerExt{
     position: absolute;
     bottom: 0;
     right: -2em;
     width: 100%;
     height:60px;
-}
+}*/
 .buttonsExt{
     text-align: right;
 }
