--- a/client/js/trip/partial/trip.html
+++ b/client/js/trip/partial/trip.html
@@ -8,7 +8,7 @@
         </h3>
     </div>
 
-    <div data-ng-repeat="day in trip.days track by day.id">
+    <div data-ng-repeat="day in trip.days track by day.id" class="day-container">
         <div class="row"  >
             <div class="list-group" >
                 <div class="day" data-ng-mouseenter="buttons[$index] = true" 
